--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #Spring Boot server configuration
 
-#spring.datasource.url=jdbc:postgresql://localhost:5433/instituto-gloria
-spring.datasource.url= ${DATABASE_URL}
-#spring.datasource.username=postgres
-#spring.datasource.password=H1.mkRqlmw6N
+spring.datasource.url=jdbc:postgresql://localhost:5433/instituto-gloria
+#spring.datasource.url= ${DATABASE_URL}
+spring.datasource.username=postgres
+spring.datasource.password=H1.mkRqlmw6N
 spring.jpa.hibernate.ddl-auto=update
 
 
@@ -12,8 +12,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 server.servlet.context-path=/instituto-gloria
 
-#server.address=0.0.0.0
-#server.port=8000
+server.address=0.0.0.0
+server.port=8000
 
 #H2 console web access configuration
 #Open "http://0.0.0.0:8000/h2-console" and hit "Connect" button
